--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "rewrites": [
-    { "source": "/success", "destination": "/success.html" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
